--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
       .d2-home__loading { height: 32px; width: 32px; margin-bottom: 20px; }
     </style>
     <!-- 统计代码 帮助 D2Admin 作者大致统计使用此框架的用户数量 -->
-    <script>
+    <!-- <script>
       var _hmt = _hmt || [];
       var hmid = "bc38887aa5588add05a38704342ad7e8";
       (function() { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>
