--- a/public/mobile.html
+++ b/public/mobile.html
@@ -10,11 +10,11 @@
   <% } %>
   <title><%= VUE_APP_TITLE %></title>
   <!-- 统计代码 帮助 D2Admin 作者大致统计使用此框架的用户数量 -->
-  <script>
+  <!-- <script>
     var _hmt = _hmt || [];
     var hmid = "bc38887aa5588add05a38704342ad7e8";
     (function() { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?" + hmid; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();
-  </script>
+  </script> -->
 </head>
 <body>
   <div id="app"></div>
